# alt-x-001

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  docker-compose.yml  lefthook.yml
.cursor/commands/: commit.md  design.md  plan_implementation.md  pr.md  prepare.md  refactor.md  req.md  start.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml  refactoring.yml
agent-os/: config.yml
agent-os/product/: mission.md  roadmap.md  tech-stack.md
agent-os/specs/2026-01-06-user-authentication/: orchestration.yml  spec.md  tasks.md
agent-os/specs/2026-01-06-user-authentication/implementations/: 4-test-review-gap-analysis-implementation.md
agent-os/specs/2026-01-06-user-authentication/planning/: initialization.md  requirements.md
agent-os/specs/2026-01-06-user-authentication/verification/: task-group-3-summary.md  task-group-4-summary.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_users_table.py
backend/src/app/: __init__.py  config.py  database.py  main.py
backend/src/app/models/: user.py
backend/src/app/routers/: auth.py
backend/src/app/schemas/: auth.py
backend/src/app/services/: auth.py
backend/src/app/tests/: conftest.py  test_auth_api.py  test_seed_data.py  test_user_model.py
backend/src/app/utils/: jwt.py  seed_data.py
backend/src/backend/: main.py
backend/tests/: test_health.py
docs/: requirements.md  requirements_org.md
frontend/: .dockerignore  Dockerfile  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: ProtectedRoute.tsx  PublicRoute.tsx
frontend/src/lib/: api.ts  axios.ts
frontend/src/pages/: HomePage.tsx  LoginPage.tsx
frontend/src/store/: authStore.ts
frontend/src/test/: auth-integration.test.tsx  auth.test.tsx  simple.test.ts
frontend/src/types/: auth.ts
